[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprite/GhostShadow.png" type="Texture" id=1]
[ext_resource path="res://Sprite/ghost-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Light.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Light2.png" type="Texture" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=5]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://Player/StateMachine/Idle.gd" type="Script" id=7]
[ext_resource path="res://Player/StateMachine/Run.gd" type="Script" id=8]
[ext_resource path="res://Player/LightStrenght.gd" type="Script" id=9]
[ext_resource path="res://Player/InObject.gd" type="Script" id=10]
[ext_resource path="res://Player/Die.gd" type="Script" id=11]
[ext_resource path="res://Sprite/ghostsave.png" type="Texture" id=12]

[sub_resource type="Gradient" id=15]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 137.31
gravity = Vector3( 0, 0, 0 )
initial_velocity = 70.32
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
color_ramp = SubResource( 16 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0.0060241, 0.976049 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.430594 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0.756818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.122727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "InObject"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../RunParticle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../RunParticle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunDown"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../RunParticle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -14 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RunLeft"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../RunParticle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, -3 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "RunRight"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../RunParticle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -3 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "RunUp"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../RunParticle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 22.0

[sub_resource type="CircleShape2D" id=12]

[node name="Player" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 10
script = ExtResource( 5 )

[node name="GhostSavingParticles" type="Particles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.69
one_shot = true
speed_scale = 1.1
explosiveness = 0.53
local_coords = false
process_material = SubResource( 17 )
texture = ExtResource( 12 )

[node name="GhostSaveParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
lifetime = 1.83
one_shot = true
explosiveness = 1.0
local_coords = false
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 89.08
initial_velocity_random = 0.43
angular_velocity = 189.89
damping = 20.88
angle = 364.0
angle_random = 1.0
scale_amount = 4.53
scale_amount_curve = SubResource( 13 )
color_ramp = SubResource( 14 )

[node name="RunParticle" type="CPUParticles2D" parent="."]
position = Vector2( 0, 2 )
emitting = false
amount = 26
lifetime = 0.13
speed_scale = 0.61
explosiveness = 0.09
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.48
scale_amount = 3.58
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 8 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.462745 )
light_mask = 9
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 8
position = Vector2( 0, -10 )
texture = ExtResource( 2 )
hframes = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 0.054902 )
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
show_behind_parent = true
light_mask = 8
rotation = 0.785398
z_index = -2
texture = ExtResource( 3 )
color = Color( 0.670588, 0.623529, 1, 1 )
mode = 2
range_item_cull_mask = 9
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 33.4
shadow_item_cull_mask = 9
script = ExtResource( 9 )

[node name="Light2D2" type="Light2D" parent="Light2D"]
show_behind_parent = true
light_mask = 8
z_index = -2
texture = ExtResource( 4 )
texture_scale = 1.9
color = Color( 0.670588, 0.623529, 1, 1 )
mode = 2
range_item_cull_mask = 13
shadow_filter = 2
shadow_filter_smooth = 24.2
shadow_item_cull_mask = 8

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
_animation_player = NodePath("../../AnimationPlayer")

[node name="InObject" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
_animation_player = NodePath("../../AnimationPlayer")
_player_sprite = NodePath("../../Sprite")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
_animation_player = NodePath("../../AnimationPlayer")
_timer = NodePath("Timer")
_ghost_save_particle = NodePath("../../GhostSavingParticles")

[node name="Timer" type="Timer" parent="StateMachine/Die"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../StateMachine/Idle")
anims/Idle = SubResource( 2 )
anims/InObject = SubResource( 11 )
anims/RESET = SubResource( 3 )
anims/RunDown = SubResource( 9 )
anims/RunLeft = SubResource( 4 )
anims/RunRight = SubResource( 5 )
anims/RunUp = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 36
priority = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 1, 1, 1, 0.0313726 )
light_mask = 0
shape = SubResource( 10 )

[node name="Player" type="Area2D" parent="."]
modulate = Color( 0, 0, 0, 0.0862745 )
position = Vector2( 0, -11 )
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 1 )
shape = SubResource( 12 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
